New endpoint was described in OpenAPI; new implementation of describing user's transactions
